Fix scrollbar gap on grid, requires custom ng-grid.js

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@
     border: 1px solid rgb(212, 212, 212);
 }
 
+.gridStyle .ngViewport {
+    overflow: hidden;
+}
+
 .green-light {
     background-color: #D0E6C9;
     color: #D0E6C9;
